WindGroup Dev/src/objects/Conditions__c.object
<CustomObject>
    <fields>
        <fullName>Condition__c</fullName>
        <label>Condition</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Issue_Types__c</fullName>
        <label>Issue Types</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Item_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Checklist_Issue_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Item_Type__c</fullName>
        <label>Item Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Checklist_Item_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number__c</fullName>
        <label>Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Condition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Condition</label>
        <referenceTo>Conditions__c</referenceTo>
        <relationshipName>Conditions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>S_N__c</fullName>
        <label>S/N</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <label>Unit</label>
        <referenceTo>Units__c</referenceTo>
        <relationshipLabel>Unit Conditions</relationshipLabel>
        <relationshipName>Conditions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Unit Condition</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Condition ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Unit Conditions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>